<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_principal"
        android:layout_centerHorizontal="true">
    </ImageView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10px">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_nom"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_nom"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_prenom"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_prenom"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_email"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_email"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_mdp"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_mdp"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_mdp"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_mdp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_mdp2"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_adresse"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_adresse"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_cp"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_cp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_cp"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_ville"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_ville"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6px">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_textview_creation_compte"
                    android:layout_marginLeft="20px"
                    android:text="@string/lbl_num_tel"
                    android:textSize="@dimen/text_size">
                </TextView>
                <EditText
                    android:id="@+id/edit_saisir_num_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_edit_creation_compte"
                    android:layout_marginRight="20px"
                    android:hint="@string/hint_saisir_num_tel"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:background="@drawable/backwithborder"
                    android:textSize="@dimen/text_size">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/scrollView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginRight="50px">

                    <Button
                        android:id="@+id/bouton_annuler_creation_compte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="18dp"
                        android:backgroundTint="@color/violet"
                        android:textColor="@color/vert"
                        android:text="@string/texte_annuler"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="50px">

                    <Button
                        android:id="@+id/bouton_valider_creation_compte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:backgroundTint="@color/violet"
                        android:textColor="@color/vert"
                        android:text="@string/texte_valider"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>